[package]
name = "lntip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = "1.0.150"
tonic_openssl_lnd = "0.1.6"
hex = "0.4.3"

[dependencies.rocket]
version = "0.5.0-rc"
features = ["json"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars", "tera"]
